# inkscape-figure-manager

./: LICENSE  Pipfile  README.md  pyproject.toml
src/: daemon.py  error_print.py  file_system_watcher.py  main.py  picker.py  watcher.py  watcher_daemon.py
src/inkscape_figure_manager/: __main__.py  daemon.py  picker.py  watcher.py  watcher_daemon.py
